--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    "react-copy-to-clipboard": "^5.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
